--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
                   <ul class="lead" style="padding-left: 18px">
                     <li><strong>2025 — Pembuatan Aplikasi Web Rental Motor (Junior Coder)</strong> — Menyusun perancangan dengan UML dan membuat database menggunakan SQL/MySQL.
                     </li>
+                    <li><strong>Oktober 2025 - Februari 2026 — Peserta magang di pt Inovindo Digital Media</strong> — Magang di posisi web development.</li>
                     <li><strong>2025 — Pembuatan Film Pendek</strong> — Keterlibatan pada pra-produksi hingga pasca-produksi (shooting & editing).</li>
                     <li><strong>2024 — Affiliate Marketing (TikTok)</strong> — Produksi konten dan optimasi conversion.</li>
                     <li><em>Prestasi:</em> Juara 1 film pendek kemerdekaan; Juara 3 desain poster “Kebiasaan Anak Sehat”; Juara 3 menggambar.</li>
@@ -141,20 +142,37 @@
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-6">
-          <div class="service-box">
-            <div class="service-ico"><span class="ico-circle"><i class="ion-android-options"></i></span></div>
-            <div class="service-content">
-              <h2 class="s-title">Hard Skills</h2>
-              <ul class="s-description" style="margin-left: 18px">
-                <li>Videografi & Video Editing</li>
-                <li>Fotografi</li>
-                <li>Desain Grafis</li>
-                <li>UI/UX Design</li>
-              </ul>
-            </div>
-          </div>
+     <div class="row">
+  <div class="col-md-6">
+    <div class="service-box">
+      <div class="service-ico">
+        <span class="ico-circle"><i class="ion-android-options"></i></span>
+      </div>
+      <div class="service-content">
+        <h2 class="s-title">Hard Skills</h2>
+        <div class="s-description" style="margin-left: 18px">
+          
+          <h4>Fotografi</h4>
+          <p>Memahami dasar-dasar fotografi seperti pencahayaan, komposisi, dan framing agar hasil foto memiliki makna dan estetika yang kuat.</p>
+
+          <h4>Videografi</h4>
+          <p>Memahami dasar-dasar videografi, termasuk teknik pengambilan gambar dan pengaturan sudut kamera untuk mendukung narasi visual.</p>
+
+          <h4>Video Editing</h4>
+          <p>Mampu menyusun video dari berbagai potongan klip, menata ritme, serta memahami pewarnaan dan koreksi warna untuk hasil akhir yang menarik.</p>
+
+          <h4>Desain Grafis</h4>
+          <p>Menguasai penataan elemen-elemen visual dasar seperti tipografi, warna, dan layout untuk menciptakan desain yang komunikatif dan harmonis.</p>
+
+          <h4>UI/UX Design</h4>
+          <p>Mampu menyelesaikan rancangan antarmuka sederhana dengan memperhatikan pengalaman pengguna agar desain mudah dipahami dan digunakan.</p>
+
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
         </div>
         <div class="col-md-6">
           <div class="service-box">
