--- a/index.html
+++ b/index.html
@@ -23,6 +23,35 @@
 
   <!-- Main Stylesheet File -->
   <link href="css/style.css" rel="stylesheet" />
+
+  <!-- === OVERRIDES: perapihan card Kemampuan === -->
+  <style>
+    /* Konsistensi card service */
+    .services-mf .service-box{
+      background:#fff; border-radius:12px; padding:28px;
+      box-shadow:0 10px 25px rgba(0,0,0,.06);
+      height:100%; transition:transform .2s ease, box-shadow .2s ease;
+    }
+    .services-mf .service-box:hover{
+      transform:translateY(-4px);
+      box-shadow:0 16px 32px rgba(0,0,0,.10);
+    }
+    .services-mf .service-ico .ico-circle{
+      width:60px;height:60px;line-height:60px;border-radius:50%;
+      display:inline-block;text-align:center;background:#f2f2f2;font-size:24px;
+    }
+    .services-mf .s-title{font-weight:700;margin-bottom:16px}
+    /* Hard skills subjudul + paragraf */
+    .skills-detail h4{font-size:16px;margin:14px 0 6px;font-weight:600}
+    .skills-detail p{margin:0 0 10px;color:#555;line-height:1.55}
+    /* Soft skills list */
+    .skills-list{margin:0;padding-left:18px}
+    .skills-list li{margin-bottom:6px}
+    /* Responsif: stack rapi di layar kecil */
+    @media (max-width:767.98px){
+      .services-mf .service-box{padding:22px}
+    }
+  </style>
 </head>
 
 <body id="page-top">
@@ -31,9 +60,7 @@
     <div class="container">
       <a class="navbar-brand js-scroll" href="#page-top">Portofolio | Alfin Muhamad Reva</a>
       <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault" aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span></span>
-        <span></span>
-        <span></span>
+        <span></span><span></span><span></span>
       </button>
       <div class="navbar-collapse collapse justify-content-end" id="navbarDefault">
         <ul class="navbar-nav">
@@ -89,7 +116,7 @@
                   </div>
                 </div>
 
-                <!-- Pendidikan dari CV -->
+                <!-- Pendidikan -->
                 <div class="title-box-2 mt-4">
                   <h5 class="title-left">Riwayat Pendidikan</h5>
                 </div>
@@ -97,32 +124,30 @@
                   <li><span class="ion-ios-book"></span> 2023–2026 — SMKN 1 Kawali (RPL)</li>
                   <li><span class="ion-ios-book"></span> 2020–2023 — MTsS Mujahidin</li>
                 </ul>
-
               </div>
+
               <div class="col-md-6">
                 <div class="about-me pt-4 pt-md-0">
                   <div class="title-box-2">
                     <h5 class="title-left">Tentang Saya</h5>
                   </div>
                   <p class="lead">
-                    Lulusan RPL dengan minat pada desain, videografi, dan fotografi. Senang menggabungkan teknologi dan visual untuk menciptakan karya yang fungsional dan menarik. Berkepribadian telaten, adaptif, dan suka mengulik hal baru. Mencari peran UI/UX untuk membangun antarmuka yang nyaman dipakai.
+                    Lulusan RPL dengan minat pada desain, videografi, dan fotografi. Senang menggabungkan teknologi dan visual untuk menciptakan karya yang fungsional dan menarik. Telaten, adaptif, dan suka mengulik hal baru. Mencari peran UI/UX untuk membangun antarmuka yang nyaman dipakai.
                   </p>
 
                   <div class="title-box-2 mt-4">
                     <h5 class="title-left">Riwayat Pengalaman</h5>
                   </div>
                   <ul class="lead" style="padding-left: 18px">
-                    <li><strong>2025 — Pembuatan Aplikasi Web Rental Motor (Junior Coder)</strong> — Menyusun perancangan dengan UML dan membuat database menggunakan SQL/MySQL.
-                    </li>
-                    <li><strong>Oktober 2025 - Februari 2026 — Peserta magang di pt Inovindo Digital Media</strong> — Magang di posisi web development.</li>
-                    <li><strong>2025 — Pembuatan Film Pendek</strong> — Keterlibatan pada pra-produksi hingga pasca-produksi (shooting & editing).</li>
+                    <li><strong>2025 — Aplikasi Web Rental Motor (Junior Coder)</strong> — Menyusun perancangan dengan UML dan membuat database SQL/MySQL.</li>
+                    <li><strong>Oktober 2025 - Februari 2026 — Magang di PT Inovindo Digital Media</strong> — Posisi web development.</li>
+                    <li><strong>2025 — Pembuatan Film Pendek</strong> — Terlibat dari pra hingga pascaproduksi (shooting & editing).</li>
                     <li><strong>2024 — Affiliate Marketing (TikTok)</strong> — Produksi konten dan optimasi conversion.</li>
                     <li><em>Prestasi:</em> Juara 1 film pendek kemerdekaan; Juara 3 desain poster “Kebiasaan Anak Sehat”; Juara 3 menggambar.</li>
                   </ul>
                 </div>
               </div>
-            </div>
-
+            </div><!-- row -->
           </div>
         </div>
       </div>
@@ -130,7 +155,7 @@
   </section>
   <!--/ About End /-->
 
-  <!--/ Skills (tanpa progress bar) /-->
+  <!--/ Skills (dibetulkan layout 2 kolom sejajar) /-->
   <section id="skills" class="services-mf route">
     <div class="container">
       <div class="row">
@@ -142,53 +167,54 @@
           </div>
         </div>
       </div>
-     <div class="row">
-  <div class="col-md-6">
-    <div class="service-box">
-      <div class="service-ico">
-        <span class="ico-circle"><i class="ion-android-options"></i></span>
-      </div>
-      <div class="service-content">
-        <h2 class="s-title">Hard Skills</h2>
-        <div class="s-description" style="margin-left: 18px">
-          
-          <h4>Fotografi</h4>
-          <p>Memahami dasar-dasar fotografi seperti pencahayaan, komposisi, dan framing agar hasil foto memiliki makna dan estetika yang kuat.</p>
 
-          <h4>Videografi</h4>
-          <p>Memahami dasar-dasar videografi, termasuk teknik pengambilan gambar dan pengaturan sudut kamera untuk mendukung narasi visual.</p>
+      <div class="row">
+        <!-- Hard Skills -->
+        <div class="col-md-6 mb-4">
+          <div class="service-box h-100">
+            <div class="service-ico mb-3">
+              <span class="ico-circle"><i class="ion-android-options"></i></span>
+            </div>
+            <div class="service-content">
+              <h2 class="s-title">Hard Skills</h2>
+              <div class="skills-detail">
+                <h4>Fotografi</h4>
+                <p>Memahami dasar-dasar fotografi: pencahayaan, komposisi, dan framing untuk hasil yang kuat secara estetika.</p>
 
-          <h4>Video Editing</h4>
-          <p>Mampu menyusun video dari berbagai potongan klip, menata ritme, serta memahami pewarnaan dan koreksi warna untuk hasil akhir yang menarik.</p>
+                <h4>Videografi</h4>
+                <p>Menguasai teknik pengambilan gambar dan sudut kamera untuk mendukung narasi visual.</p>
 
-          <h4>Desain Grafis</h4>
-          <p>Menguasai penataan elemen-elemen visual dasar seperti tipografi, warna, dan layout untuk menciptakan desain yang komunikatif dan harmonis.</p>
+                <h4>Video Editing</h4>
+                <p>Menyusun alur dari berbagai klip, menata ritme, serta memahami pewarnaan dan koreksi warna.</p>
 
-          <h4>UI/UX Design</h4>
-          <p>Mampu menyelesaikan rancangan antarmuka sederhana dengan memperhatikan pengalaman pengguna agar desain mudah dipahami dan digunakan.</p>
+                <h4>Desain Grafis</h4>
+                <p>Memahami elemen dasar (tipografi, warna, layout) untuk desain yang komunikatif dan rapi.</p>
 
+                <h4>UI/UX Design</h4>
+                <p>Menyelesaikan rancangan antarmuka sederhana dengan fokus kejelasan dan kemudahan penggunaan.</p>
+              </div>
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
-  </div>
-</div>
 
-        </div>
-        <div class="col-md-6">
-          <div class="service-box">
-            <div class="service-ico"><span class="ico-circle"><i class="ion-person"></i></span></div>
+        <!-- Soft Skills -->
+        <div class="col-md-6 mb-4">
+          <div class="service-box h-100">
+            <div class="service-ico mb-3">
+              <span class="ico-circle"><i class="ion-person"></i></span>
+            </div>
             <div class="service-content">
               <h2 class="s-title">Soft Skills</h2>
-              <ul class="s-description" style="margin-left: 18px">
-                <li>Kerja Sama Tim</li>
-                <li>Pemecahan Masalah</li>
-                <li>Adaptasi Lingkungan Baru</li>
-                <li>Kreativitas & Ketelitian</li>
+              <ul class="skills-list">
+                <li>Kerja Sama Tim — koordinasi, komunikasi, dan pembagian peran efektif.</li>
+                <li>Pemecahan Masalah — analitis, iteratif, dan berorientasi solusi.</li>
+                <li>Adaptasi Lingkungan Baru — cepat belajar tools/workflow yang berbeda.</li>
+                <li>Kreativitas & Ketelitian — ide segar dengan eksekusi rapi dan konsisten.</li>
               </ul>
             </div>
           </div>
         </div>
-      </div>
+      </div><!-- row -->
     </div>
   </section>
   <!--/ Skills End /-->
@@ -205,7 +231,9 @@
           </div>
         </div>
       </div>
+
       <div class="row">
+        <!-- Item 1 -->
         <div class="col-md-4">
           <div class="work-box">
             <a href="img/gawe.png" data-lightbox="gallery-mf">
@@ -222,6 +250,7 @@
             </a>
           </div>
         </div>
+        <!-- Item 2 -->
         <div class="col-md-4">
           <div class="work-box">
             <a href="img/gawe2.png" data-lightbox="gallery-mf">
@@ -238,6 +267,7 @@
             </a>
           </div>
         </div>
+        <!-- Item 3 -->
         <div class="col-md-4">
           <div class="work-box">
             <a href="img/gawe3.png" data-lightbox="gallery-mf">
@@ -254,7 +284,7 @@
             </a>
           </div>
         </div>
-      </div>
+      </div><!-- row -->
     </div>
   </section>
   <!--/ Section Portfolio End /-->
@@ -331,6 +361,7 @@
                     </form>
                   </div>
                 </div>
+
                 <div class="col-md-6">
                   <div class="title-box-2 pt-4 pt-md-0"><h5 class="title-left">Hubungi Saya</h5></div>
                   <div class="more-info">
@@ -347,12 +378,13 @@
                     </ul>
                   </div>
                 </div>
-              </div>
+              </div><!-- row -->
             </div>
           </div>
         </div>
       </div>
     </div>
+
     <footer>
       <div class="container">
         <div class="row">
